[package]
name = "golem-ftp"
version = "0.4.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/yagna"
repository = "https://github.com/golemfactory/yagna"
license = "LGPL-3.0"
description="Golem File Transfer Protocol"
keywords=["golem", "yagna"]

[[bin]]
name="golem-ftp"

[dependencies]
ya-compile-time-utils = "0.2"
ya-core-model = { version = "0.9.1", features = ["gftp", "identity", "net"] }
ya-service-bus = { version = "0.7.3" }

actix-rt = "2.7"
anyhow = "1.0"
digest = "0.8"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.3" }
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
structopt = "0.3.9"
thiserror = "1.0.20"
tokio = { version = "1", features = ["io-std", "time"] }
url = { version = "2.1.1", features = ["serde"] }
parking_lot = "0.12.2"

[profile.release-fast]
inherits = "release"
incremental = false
opt-level = 1
panic = "unwind"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
